# Project_Synapse

./: .env.example  .gitignore  Active_File.md  Claude_Instructions.md  README.md  _pdf_extract.txt  claudreview.md  pyproject.toml  review_comments.md  synapse_harness.py
.agent_os/: Active_File_Template.md  Initial_prompt(not for AI consumption).md  collaboration_model_V2.0.md
Instrument Data/: instrument_abbott_alinity_raw.json  instrument_beckman_au5800.txt  instrument_biorad_variant_ii.csv  instrument_roche_cobas_8000.txt  instrument_siemens_atellica_raw.txt  instrument_sysmex_xn1000.csv
New Data/: fhir_observations.json  hl7_v2_messages.txt  lis_lab_orders.csv  lis_order_line_items.csv  lis_patient_master.csv  mw_instrument_worklist.csv  mw_raw_results.csv  mw_specimen_tubes.csv
docs/: ADRs_H1_H16.md  DISCREPANCY_PLAYBOOK.md  DOMAIN_PACK_CONTRACT.md  Grok_Plan19Jul.txt  Instrument_Data_Format.md  Master Architectural Specification & Implementation Roadmap.md  ORG_WIDE_SEMANTIC_DATA_CORE.md  PHASE_A_BASELINE_19Jul.md  POC_RESULTS.md  SESSION_HANDOFF.md  SETUP_DECISIONS.md  THREAT_MODEL.md  VISUAL_SENSE_PROOF.md
management/: Features.md  Road_map.md  master_plan.md
new_data/: fhir_observations.json  hl7_v2_oru_r01.hl7  lis_order_items.csv  lis_orders.csv  lis_patients.csv  mw_barcodes.csv  mw_results.csv  mw_worklist.csv
scripts/: demo_e2e.py  fix_model.py  generate_lab_data.py  prove_platform.py  sense_demo.py  smoke_banking_baseline.py  smoke_banking_join.py  smoke_dual_path.py  smoke_fhir_conflict.py  smoke_graphiti_one.py  smoke_graphiti_search.py  (+9 more)
(+229 files in other folders)
